Update index and socket functions
Made socket functions draw circles instead of letter P and adde title to the index html page.

--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,14 @@
-<canvas id="ctx" width="500" height="500" style="border: 1px solid #000000"></canvas>
+<html>
+    <head>
+        <title>Tank Game</title>
+    </header>
 
-<script src="/socket.io/socket.io.js"></script>
-<script src="/client/js/socket_functions.js"></script>
-<script src="/app.js"></script>
+<body>
+    <canvas id="ctx" width="500" height="500" style="border: 1px solid #000000"></canvas>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/client/js/socket_functions.js"></script>
+    <script src="/app.js"></script>
+</body>
+
+</html>
