--- a/client/index.html
+++ b/client/index.html
@@ -7,8 +7,7 @@
     <canvas id="ctx" width="500" height="500" style="border: 1px solid #000000"></canvas>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/client/js/socket_functions.js"></script>
-    <script src="/app.js"></script>
+    <script src="/js/socket_functions.js"></script>
 </body>
 
 </html>
